made sure all images added redirect to the target

--- a/Biography/biography.html
+++ b/Biography/biography.html
@@ -41,27 +41,39 @@
         <h2 id="childhood">Childhood</h2>
         <div class="image-gallery">
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Childhood-Nursery-Award.jpg" alt="Me at Nursery Receiving Awards">
+                <a class="image-link" href="../Images/Biography/Childhood-Nursery-Award.jpg" target="Image Up Close">
+                    <img src="../Images/Biography/Childhood-Nursery-Award.jpg" alt="Me at Nursery Receiving Awards">
+                </a>
                 <figcaption>Nursery Self receiving Awards</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Childhood-Candid-Smiling.jpg" alt="Elementary School Event">
+                <a class="image-link" href="../Images/Biography/Childhood-Candid-Smiling.jpg" target="Image Up Close">
+                    <img src="../Images/Biography/Childhood-Candid-Smiling.jpg" alt="Elementary School Event">
+                </a>
                 <figcaption>During one of the school events in elementary</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Childhood-Kinder-Valedictorian.jpg" alt="Me at Kinder Valedictorian">
+                <a class="image-link" href="../Images/Biography/Childhood-Kinder-Valedictorian.jpg" target="Image Up Close">
+                    <img src="../Images/Biography/Childhood-Kinder-Valedictorian.jpg" alt="Me at Kinder Valedictorian">
+                </a>
                 <figcaption>When I Became Valedictorian in Kindergarten</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Childhood-Retreat-Candid-Pic.jpg" alt="At our Retreat">
+                <a class="image-link" href="../Images/Biography/Childhood-Retreat-Candid-Pic.jpg" target="Image Up Close">
+                    <img src="../Images/Biography/Childhood-Retreat-Candid-Pic.jpg" alt="At our Retreat">
+                </a>
                 <figcaption>Taken during our Grade 6 Retreat</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Childhood-Field-Demo.jpg" alt="School Field Demo">
+                <a class="image-link" href="../Images/Biography/Childhood-Field-Demo.jpg" target="Image Up Close">
+                    <img src="../Images/Biography/Childhood-Field-Demo.jpg" alt="School Field Demo">
+                </a>
                 <figcaption>At one of the annual field demo performances</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Childhood-Field-Trip-Arms-Out.jpeg" alt="Swimming Field Trip">
+                <a class="image-link" href="../Images/Biography/Childhood-Field-Trip-Arms-Out.jpeg" target="Image Up Close">
+                    <img src="../Images/Biography/Childhood-Field-Trip-Arms-Out.jpeg" alt="Swimming Field Trip">
+                </a>
                 <figcaption>When we went swimming during a field trip</figcaption>
             </figure>
         </div>
@@ -70,15 +82,21 @@
         <h2 id="teenage-years">Teenage Years</h2>
         <div class="image-gallery">
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Teenage-Online-Class-Setup.jpg" alt="My Online Class Setup">
+                <a class="image-link" href="../Images/Biography/Teenage-Online-Class-Setup.jpg" target="Image Up Close">
+                    <img src="../Images/Biography/Teenage-Online-Class-Setup.jpg" alt="My Online Class Setup">
+                </a>
                 <figcaption>My Online Class Setup</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Teenage-Floating-Pillow.jpg" alt="For my online class project">
+                <a class="image-link" href="../Images/Biography/Teenage-Floating-Pillow.jpg" target="Image Up Close">
+                    <img src="../Images/Biography/Teenage-Floating-Pillow.jpg" alt="For my online class project">
+                </a>
                 <figcaption>One of many online class activity submission</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/Teenage-Pearl-Smiling.jpg" alt="My Submission for a project">
+                <a class="image-link" href="../Images/Biography/Teenage-Pearl-Smiling.jpg" target="Image Up Close">
+                    <img src="../Images/Biography/Teenage-Pearl-Smiling.jpg" alt="My Submission for a project">
+                </a>
                 <figcaption>My Submission for a subject project</figcaption>
             </figure>
         </div>
@@ -87,23 +105,33 @@
         <h2 id="college-years">College Years</h2>
         <div class="image-gallery">
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/College-Singing-Contest-Award.JPG" alt="Singing Contest Award">
+                <a class="image-link" href="../Images/Biography/College-Singing-Contest-Award.JPG" target="Image Up Close">
+                    <img src="../Images/Biography/College-Singing-Contest-Award.JPG" alt="Singing Contest Award">
+                </a>
                 <figcaption>Back when I won Runner Up in a singing contest</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/College-Tarlac-1-Award.jpg" alt="At the First Time Competiting with UEC">
+                <a class="image-link" href="../Images/Biography/College-Tarlac-1-Award.jpg" target="Image Up Close">
+                    <img src="../Images/Biography/College-Tarlac-1-Award.jpg" alt="At the First Time Competiting with UEC">
+                </a>
                 <figcaption>Me holding our awards for our first competition after the pandemic (2024)</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/College-SHS-Graduation-Pic.jpg" alt="My SHS Graduation Picture">
+                <a class="image-link" href="../Images/Biography/College-SHS-Graduation-Pic.jpg" target="Image Up Close">
+                    <img src="../Images/Biography/College-SHS-Graduation-Pic.jpg" alt="My SHS Graduation Picture">
+                </a>
                 <figcaption>BTS of My SHS Graduation Picture</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/College-Freshmen-Friend-Group.jpeg" alt="My Friend Group during Freshmen Year">
+                <a class="image-link" href="../Images/Biography/College-Freshmen-Friend-Group.jpeg" target="Image Up Close">
+                    <img src="../Images/Biography/College-Freshmen-Friend-Group.jpeg" alt="My Friend Group during Freshmen Year">
+                </a>
                 <figcaption>My Friend Group back in Freshmen Year (Until Now)</figcaption>
             </figure>
             <figure class="image-gallery-item">
-                <img src="../Images/Biography/College-My-UE-Snapshot-At-Night.jpg" alt="UE at Night">
+                <a class="image-link" href="../Images/Biography/College-My-UE-Snapshot-At-Night.jpg" target="Image Up Close">
+                    <img src="../Images/Biography/College-My-UE-Snapshot-At-Night.jpg" alt="UE at Night">
+                </a>
                 <figcaption>UE at Night (taken by me)</figcaption>
             </figure>
         </div>
