--- a/MediaPages/film.html
+++ b/MediaPages/film.html
@@ -48,7 +48,9 @@
             <br><b>Release date:</b> November 22, 2024 (USA)
             <br><b>Director:</b> Jon M. Chu
             <br><b>Running time:</b> 2h 40m</p>
-            <img src="https://upload.wikimedia.org/wikipedia/en/3/3c/Wicked_%282024_film%29_poster.png" alt="Wicked Movie Poster">
+            <a class="image-link" href="https://upload.wikimedia.org/wikipedia/en/3/3c/Wicked_%282024_film%29_poster.png" target="Image Up Close">
+                <img src="https://upload.wikimedia.org/wikipedia/en/3/3c/Wicked_%282024_film%29_poster.png" alt="Wicked Movie Poster">
+            </a>
             <p><b>Source:</b> Wikipedia</p>
         </div>
         <div class="media-item">
@@ -68,7 +70,9 @@
             <br><b>Release date:</b> December 11, 1982 (USA)
             <br><b>Director:</b> Alan J. Pakula
             <br><b>Running time:</b> 2h 30m</p>
-            <img src="https://play-lh.googleusercontent.com/4wGAniVc2OEI1OyQc50ozvmue3j0FyObrr4zaEOdzHuQ5FfS7JrdnfU7nTQzKqsB9Qos" alt="Sophie's Choice Movie Poster">
+            <a class="image-link" href="https://play-lh.googleusercontent.com/4wGAniVc2OEI1OyQc50ozvmue3j0FyObrr4zaEOdzHuQ5FfS7JrdnfU7nTQzKqsB9Qos" target="Image Up Close">
+                <img src="https://play-lh.googleusercontent.com/4wGAniVc2OEI1OyQc50ozvmue3j0FyObrr4zaEOdzHuQ5FfS7JrdnfU7nTQzKqsB9Qos" alt="Sophie's Choice Movie Poster">
+            </a>
             <p><b>Source:</b> Google Play Movies</p>
         </div>
     </div>
