--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             <p>A Student, Singer, Programmer, and Writer, all in one, pursuing BS Computer Science and singing with the University Chorale.</p>
             <a href="#contact-info" class="contact-me"><i class="bi bi-envelope"></i> Contact Me</a>
         </div>
-        <img src="Images/Homepage-Main-Image.png" alt="Homepage Image of Me">
+        <a class="image-link" href="Images/Homepage-Main-Image.png" target="Image Up Close">
+            <img src="Images/Homepage-Main-Image.png" alt="Homepage Image of Me">
+        </a>
     </div>
     <div class="cream-section" id="about-me">
         <div class="section-text">
@@ -45,7 +47,9 @@
             <br>
             <a href="Biography/biography.html"><i class="bi bi-person"></i> Read My Biography</a>
         </div>
-        <img src="" alt="">
+        <a class="image-link" href="" target="Image Up Close">
+            <img src="" alt="">
+        </a>
     </div>
     <div class="purple-section" id="blogs">
         <div class="section-text">
