--- a/Blog Stories Pages/tech.html
+++ b/Blog Stories Pages/tech.html
@@ -39,7 +39,9 @@
             <h3 class="minortag">Student</h3>
         </div>
         <figure class="image-gallery-item">
-            <img src="https://images.unsplash.com/photo-1547394765-185e1e68f34e?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Closeup image of keyboard">
+            <a class="image-link" href="https://images.unsplash.com/photo-1547394765-185e1e68f34e?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" target="Image Up Close">
+                <img src="https://images.unsplash.com/photo-1547394765-185e1e68f34e?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Closeup image of keyboard">
+            </a>
             <figcaption>A Closeup image of keyboard</figcaption>
 
         </figure>
