--- a/MediaPages/tv.html
+++ b/MediaPages/tv.html
@@ -40,7 +40,9 @@
                 <br><b>Director:</b> Matt Shakman
                 <br><b>No. of Episodes:</b> 9 episodes
                 </p>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoA5WUh9FQyGX9-Fk4mqqiKxOwnr1rEt3pkBYkDUgJP6KCPRUP1z39xmIsDXvda-VB_BToIGzfqnNy1gfPY1e0mKUkOE1FICETxV3pxA&s=10" alt="WandaVision Poster">
+                <a class="image-link" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoA5WUh9FQyGX9-Fk4mqqiKxOwnr1rEt3pkBYkDUgJP6KCPRUP1z39xmIsDXvda-VB_BToIGzfqnNy1gfPY1e0mKUkOE1FICETxV3pxA&s=10" target="Image Up Close">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoA5WUh9FQyGX9-Fk4mqqiKxOwnr1rEt3pkBYkDUgJP6KCPRUP1z39xmIsDXvda-VB_BToIGzfqnNy1gfPY1e0mKUkOE1FICETxV3pxA&s=10" alt="WandaVision Poster">
+                </a>
                 <p><b>Source:</b> Rotten Tomatoes</p>
             </div>
             <div class="media-item">
@@ -52,7 +54,9 @@
                 <br><b>Director:</b> Garry Marshall
                 <br><b>No. of Episodes:</b> 5 seasons, 40 episodes
                 </p>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0aPX7LG0K7zagRuAOhuA8WFg2rnEfipv9xg&s" alt="The Umbrella Academy Poster">
+                <a class="image-link" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0aPX7LG0K7zagRuAOhuA8WFg2rnEfipv9xg&s" target="Image Up Close">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0aPX7LG0K7zagRuAOhuA8WFg2rnEfipv9xg&s" alt="The Umbrella Academy Poster">
+                </a>
                 <p><b>Source: </b>Wikipedia</p>
             </div>
             <!---<div class="media-item">
