fixed footer links

--- a/Images/gallery.html
+++ b/Images/gallery.html
@@ -188,8 +188,8 @@
     <footer id="contact-info">
         <p>Contact Information:</p>
         <div class="footer-links">
-            <a href="mailto:obillomonandrei@ue.edu.ph"><i class="bi bi-envelope"></i> Email</a>
-            <a href="https://www.facebook.com/Mon.Andrei.Obillo"><i class="bi bi-facebook"></i> Facebook</a>
+            <a href="mailto:obillomonandrei@ue.edu.ph" target="_blank"><i class="bi bi-envelope"></i> Email</a>
+            <a href="https://www.facebook.com/Mon.Andrei.Obillo" target="_blank"><i class="bi bi-facebook"></i> Facebook</a>
         </div>
     </footer>
     <a href="#" class="back-to-top" id="back-to-top"><i class="bi bi-arrow-up-circle"></i> Back to Top</a>
